ggplot2 0.8.8 (2010-XX-XX) ----------------------------------------

* statistics now also respect layer parameter inherit.aes (thanks to bug report by Lorenzo Isella and investigation by Brian Diggs)
* fix ordering bug in facet_wrap (thanks to bug report by Frank Davenport)
* geom_hline and geom_vline will not impact legend when used for fixed intercepts
* panels with no non-missing values trigged errors with some statistics. (reported by Giovanni Dall'Olio)
* check all axis labels for expressions (reported by Benji Oswald)
* geom_errobarh now respects height parameter
* stat_smooth now uses built-in confidence interval (with small sample correction) for linear models (thanks to suggestion by Ian Fellows)
* stat_qq has new dparam parameter for specifying distribution parameters (thanks to Yunfeng Zhang for the bug report)
* label_bquote works with more expressions (factors now cast to characters, thanks to Baptiste Auguie for bug report)
* stat_bin: fix small bug when dealing with single bin with NA position (reported by John Rauser)
* geom_hline/geom_vline: intercept values not set quite correctly which caused a problem in conjunction with transformed scales (reported by Seth Finnegan)
* non-left legend positions now work once more (thanks to patch from Karsten Loesing)
* geom_smooth now deals with missing values in the same way as geom_line (thanks to patch from Karsten Loesing)